# stm32_cubemx_atlas

./: .gitmodules  components.txt
components/atlas/: CMakeLists.txt
components/atlas/common/: CMakeLists.txt  atlas_config.h  atlas_err.h  atlas_event.h  atlas_log.h  atlas_notify.h  atlas_utility.h  config.h  err.c  err.h  event.h  notify.h  utility.h  write.c
components/atlas/joint_task/: CMakeLists.txt  joint_manager.c  joint_manager.h  joint_task.c  joint_task.h
components/atlas/joints_task/: CMakeLists.txt  joints_config.h  joints_manager.c  joints_manager.h  joints_task.c  joints_task.h
components/atlas/joints_task/joint_task/: CMakeLists.txt  joint_config.h  joint_manager.c  joint_manager.h  joint_task.c  joint_task.h
components/atlas/kinematics_task/: CMakeLists.txt  kinematics_config.h  kinematics_manager.c  kinematics_manager.h  kinematics_task.c  kinematics_task.h
components/atlas/queue_manager/: CMakeLists.txt  queue_manager.c  queue_manager.h
components/atlas/stream_buffer_manager/: CMakeLists.txt  stream_buffer_manager.c  stream_buffer_manager.h
components/atlas/task_manager/: CMakeLists.txt  task_manager.c  task_manager.h
components/atlas/uart_task/: CMakeLists.txt  uart_manager.c  uart_manager.h  uart_task.c  uart_task.h
components/joint_task/: joint_manager.c  joint_task.c
cubemx/: .mxproject  cubemx.ioc
cubemx/Core/Inc/: FreeRTOSConfig.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h
cubemx/Core/Src/: freertos.c  gpio.c  main.c  stm32l4xx_it.c  tim.c  usart.c
cubemx/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_timebase_tim_template.c
cubemx/cmake/: gcc-arm-none-eabi.cmake
cubemx/cmake/stm32cubemx/: CMakeLists.txt
main/: CMakeLists.txt  hooks.c  main.c  nvic.c  syscalls.c
make/: common.mk  flash.mk
